# AutoDBAudit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  audit_history.db  audit_settings.json  build_log.txt  commit_msg.txt  db-requirements.md  debug_action_log.py  dummy.db  inspect_history.py  kingoversa.sql  main.py  minimal_logic_test.py  mysqlite.session.sql  probe_sync_state.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_history.py  reset_test_env.py  reset_workspace.ps1  run.ps1  run_e2e.ps1  run_simulation.py  run_tests.ps1  sql_targets.json  test_actions_verify.xlsx  test_enhanced_report.py  test_multi_instance.py  test_output.txt  test_phase1.py  test_phase2a.py  test_setup.py  test_sheets_verify.xlsx  test_sql_version.py  test_sync_logic_root.py
.scripts/: add_finalize_calls.py  check_compile.py  check_excel_headers.py  clean.ps1  debug_failures.ps1  debug_tests.ps1  fix_dropdown_letters.py  fix_uuid_consistency.py  fix_uuid_consistency_v3.py  fix_uuid_consistency_v4.py  migrate_sheets_uuid.py  pytest.ps1  python.ps1  run_all_verbose.ps1  run_comprehensive_tests.ps1  run_debug_inline.ps1  run_debug_keys.ps1  run_e2e_tests.ps1  run_edge_cases.ps1  run_final.ps1  run_in_venv.py  run_integration_only.ps1  run_integration_tests.ps1  run_linked_tests.py  run_remove_test.ps1  run_single_test.ps1  run_tests.py  run_tests_wrapper.py  run_ultimate_e2e.py  show_failed.ps1  validate_specs.py  verify_atomic_imports.py
.test_output/: debug_log.txt  is_exceptioned_debug.txt  key_debug.txt  key_format_compare.txt
AgentStuff/: AGENT_HUB.md  AGENT_SOP.md  README.md  memory.md
archive/: debug_output.txt  diag_v2.py
config/: .gitkeep  README.md  audit_config.example.json  audit_config.example.jsonc  audit_config.json  credentials.example.jsonc  setup_config.bat  sql_targets.example.json  sql_targets.example.jsonc  sql_targets.json  sql_targets_home.json
credentials/: README.md  credentials.example.json
docs/: ACTIVE_TASKS.md  AI_RUNBOOK.md  ARCHITECTURE.md  ATOMIC_E2E_IMPLEMENTATION_PLAN.md  ATOMIC_E2E_TASK.md  ATOMIC_E2E_TEST_SPECS.md  AUDIT_WORKFLOW.md  CLI_REFERENCE.md  DATA_KEYS.md  DEV_THOUGHTS.md  DOCUMENTATION_HUB.md  E2E_PHASE20_FINDINGS.md  E2E_TESTING_GUIDE.md  E2E_TEST_STATUS.md  ENGINEERING_STANDARDS.md  ENTITY_KEY_FORMATS.md  EXCEL_COLUMNS.md  GAP_ANALYSIS_AND_RECOMMENDATIONS.md  INDEX.md  PERSIAN_REPORTS.md  PROJECT_STATUS.md  PSREMOTE_INTEGRATION.md  REAL_DB_E2E_PLAN.md  REMEDIATION_ENGINE.md  ROADMAP.md  ROW_UUID_DESIGN.md  SCHEMA_DESIGN.md  SCHEMA_REFERENCE.md  SESSION_2025-12-22_E2E_TESTS.md  SESSION_HANDOFF.md  SESSION_HANDOFF_2025-12-17.md  SESSION_HANDOFF_2025-12-17_FIXES.md  SESSION_HANDOFF_2025-12-18_REFACTOR.md  SESSION_HANDOFF_2025-12-21.md  SESSION_HANDOFF_2025-12-22.md  SESSION_HANDOFF_DEV_SWITCH.md  (+18 more)
(+692 files in other folders)
