[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodbaudit"
version = "0.1.0"
description = "SQL Server Security Audit Tool - offline-capable, self-contained"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AutoDBAudit Team"}
]
keywords = ["sql-server", "audit", "security", "compliance", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

dependencies = [
    "pyodbc>=4.0.39",
    "openpyxl>=3.1.0",
    "pywin32>=306",
    "jinja2>=3.0",
    "pywinrm>=0.4.0",
    "rich>=13.0",  # For enhanced CLI output
    "typer>=0.9.0",  # Modern CLI framework
    "pydantic>=2.0",  # Data validation
    "structlog>=23.0",  # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",  # Parallel test execution
    "hypothesis>=6.0",  # Property-based testing
    "allpairspy>=2.5",  # Combinatorial testing
    "faker>=18.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",  # Git hooks
    "sqlfluff>=2.0",  # SQL linting
    "coverage[toml]>=7.0",  # Enhanced coverage
    "pytest-mock>=3.0",
    "pytest-benchmark>=4.0",  # Performance testing
]

[project.scripts]
autodbaudit = "autodbaudit.interface.cli:main"

[project.urls]
Repository = "https://github.com/your-org/autodbaudit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autodbaudit = ["py.typed"]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]  # Line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.pylint]
extension-pkg-allow-list = ["pyodbc"]
disable = ["E1128"]
